--- a/BlackYab/BlackYab.csproj
+++ b/BlackYab/BlackYab.csproj
@@ -81,6 +81,7 @@
     <Compile Include="methods\GetFunctions.cs" />
     <Compile Include="methods\InputFunctions.cs" />
     <Compile Include="methods\sqlfunctions.cs" />
+    <Compile Include="modals\ErrorResponse.cs" />
     <Compile Include="modals\Model.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
