--- a/BlackYab/BlackYab.csproj
+++ b/BlackYab/BlackYab.csproj
@@ -85,9 +85,9 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="methods\Authenticator.cs" />
+    <Compile Include="methods\DataAuthenticator.cs" />
     <Compile Include="methods\GetFunctions.cs" />
-    <Compile Include="methods\InputFunctions.cs" />
+    <Compile Include="methods\StoredProcedureFunctions.cs" />
     <Compile Include="methods\sqlfunctions.cs" />
     <Compile Include="modals\ErrorResponse.cs" />
     <Compile Include="modals\Model.cs" />
