--- a/BlackYab/BlackYab.csproj
+++ b/BlackYab/BlackYab.csproj
@@ -87,6 +87,7 @@
   <ItemGroup>
     <Compile Include="methods\DataAuthenticator.cs" />
     <Compile Include="methods\GetFunctions.cs" />
+    <Compile Include="methods\MessageProcessor.cs" />
     <Compile Include="methods\StoredProcedureFunctions.cs" />
     <Compile Include="methods\sqlfunctions.cs" />
     <Compile Include="methods\WordList.cs" />
