--- a/BlackYab/BlackYab.csproj
+++ b/BlackYab/BlackYab.csproj
@@ -60,6 +60,22 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="AddInstitution.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="AddOrgcom.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="AddTeam.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="AddVenues.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="HomePage.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -70,6 +86,18 @@
     </Page>
     <Compile Include="AddDebator.xaml.cs">
       <DependentUpon>AddDebator.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="AddInstitution.xaml.cs">
+      <DependentUpon>AddInstitution.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="AddOrgcom.xaml.cs">
+      <DependentUpon>AddOrgcom.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="AddTeam.xaml.cs">
+      <DependentUpon>AddTeam.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="AddVenues.xaml.cs">
+      <DependentUpon>AddVenues.xaml</DependentUpon>
     </Compile>
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
